# kring

./: Cargo.toml  ideas.md
crates/credential-management-proto/: Cargo.toml
crates/credential-management-proto/src/: credential.rs  discovery.rs  lib.rs  mediation.rs
crates/ctap2-proto/: Cargo.toml  README.md
crates/ctap2-proto/examples/: libfido2.rs  mock.rs
crates/ctap2-proto/src/: lib.rs
crates/ctap2-proto/src/attestation/: mod.rs
crates/ctap2-proto/src/authenticator/: config.rs  device.rs  mod.rs  selection.rs
crates/ctap2-proto/src/authenticator/assertion/: get.rs
crates/ctap2-proto/src/authenticator/bio_enrollment/: mod.rs
crates/ctap2-proto/src/authenticator/client_pin/: auth_protocol.rs  mod.rs
crates/ctap2-proto/src/authenticator/client_pin/raw/: mod.rs  public_key.rs
crates/ctap2-proto/src/authenticator/credential/: make.rs  management.rs  mod.rs
crates/ctap2-proto/src/authenticator/credential/management/: raw.rs
crates/ctap2-proto/src/authenticator/reset/: mod.rs
crates/ctap2-proto/src/extensions/: cred_protect.rs  mod.rs
crates/ctap2-raw/: Cargo.toml
crates/ctap2-raw/src/: lib.rs
crates/fido-common/: Cargo.toml
crates/fido-common/src/: attestation.rs  authenticator.rs  extension.rs  extensions.rs  lib.rs  registry.rs
crates/fido-common/src/attestation/: enterprise.rs
crates/fido-common/src/credential/: mod.rs  public_key.rs
crates/hid-ctap2-proto/: Cargo.toml
crates/hid-ctap2-proto/src/: hid.rs  lib.rs
crates/webauthn3-proto/: Cargo.toml
crates/webauthn3-proto/src/: attestation.rs  authenticator.rs  client.rs  lib.rs  public_key.rs  token.rs
crates/webauthn3-proto/src/public_key/: create.rs  request.rs
