[package]
name = "ctap2-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fido-common = { path = "../fido-common" }
bounded-integer = { version = "0.5.3", features = ["types", "std"] }
coset = "0.3.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "fido-common/serde"]
