[package]
name = "ctap2-raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fido-common = { path = "../fido-common" }
heapless = { version = "0.7.16", default-features = false }
serde = { version = "=1.0.136", default-features = false, features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "fido-common/serde", "heapless/serde"]
