[package]
name = "fido-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = { version = "0.2.1", default-features = false, optional = true }
coset = { version = "0.3.4", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
bitflags = { version = "2.2.1", default-features = false, optional = true }

[features]
serde = ["dep:serde", "dep:bitflags", "dep:ciborium"]
