[package]
name = "fido-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = { version = "0.2.1", default-features = false, optional = true }
coset = { version = "0.3.4", default-features = false }
serde = { version = "=1.0.136", features = ["derive"], optional = true }
# Version <= to support older serde
serde_with = { version = "<=2.2.0", optional = true }
bitflags = { version = "2.2.1", default-features = false, optional = true }
heapless = "0.7.16"

[features]
std = []
serde = ["dep:serde", "dep:serde_with", "dep:bitflags", "dep:ciborium"]
