[package]
name = "webauthn3-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
credential-management-proto = { path = "../credential-management-proto" }
fido-common = { path = "../fido-common" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
